agregando items y dandole forma al card

--- a/src/app/kitchenqueue/kitchenqueue.component.html
+++ b/src/app/kitchenqueue/kitchenqueue.component.html
@@ -1,3 +1,27 @@
-<p>
-  kitchenqueue works!
-</p>
+
+
+<mat-grid-list cols="4" rowHeight="300px">
+  <mat-grid-tile><mat-card class="card">
+        
+            <mat-card-title class="title">Orden #4 </mat-card-title>
+           
+      
+
+        <mat-card-content class="mat-card-content" >
+
+
+        
+          </mat-card-content>
+          <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+              <button mat-button>SHARE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+
+
+  </mat-card></mat-grid-tile>
+  <mat-grid-tile><button mat-raised-button>Waiter queue</button></mat-grid-tile>
+  <mat-grid-tile><button mat-raised-button>Estadisticas</button></mat-grid-tile>
+  <mat-grid-tile><button mat-raised-button>Agregar o editar productos</button></mat-grid-tile>
+</mat-grid-list>
