--- a/src/app/kitchenqueue/kitchenqueue.component.html
+++ b/src/app/kitchenqueue/kitchenqueue.component.html
@@ -25,3 +25,4 @@
   <mat-grid-tile><button mat-raised-button>Estadisticas</button></mat-grid-tile>
   <mat-grid-tile><button mat-raised-button>Agregar o editar productos</button></mat-grid-tile>
 </mat-grid-list>
+<button mat-raised-button routerLink="/mainpage" >Back</button>
