--- a/src/app/kitchenqueue/kitchenqueue.component.html
+++ b/src/app/kitchenqueue/kitchenqueue.component.html
@@ -1,28 +1,68 @@
+<mat-grid-list cols="3" rowHeight="400px">
+  <mat-grid-tile>
+
+    <mat-card class="card">
+    
+      <mat-card-header class="mat-card-header">
+
+        <mat-card-title class="tiempo">1:45 min</mat-card-title>
+        <mat-card-title class="title"> #1 </mat-card-title>
+
+      </mat-card-header>
+
+      <mat-card-content class="mat-card-content">
+
+        <hr>
+        <mat-grid-list cols="1" rowHeight="30px">
+            <mat-grid-tile >
+              
+              <div class="menu">POLLO Alfredo  </div>
+              </mat-grid-tile>
+              <mat-grid-tile >
+                  <div class="menu">Costilla de Cerdo </div>
+                  </mat-grid-tile>
+            </mat-grid-list>
+      </mat-card-content>
+   
+      <mat-card-actions>
+          <hr>
+        <button mat-button class="listo">Listo</button>
+        <button mat-button>Cancelar</button>
+
+      </mat-card-actions>
+
+    </mat-card>
+
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="card">
+
+      <mat-card-header class="mat-card-header">
+        <mat-card-title class="tiempo">1:45 min</mat-card-title>
+        <mat-card-title class="title"> #100 </mat-card-title>
 
 
-<mat-grid-list cols="4" rowHeight="300px">
-  <mat-grid-tile><mat-card class="card">
-        
-            <mat-card-title class="title">Orden #4 </mat-card-title>
-           
-      
-
-        <mat-card-content class="mat-card-content" >
+      </mat-card-header>
+      <mat-card-content class="mat-card-content">
+        <hr>
 
 
-        
-          </mat-card-content>
-          <mat-card-actions>
-              <button mat-button>LIKE</button>
-              <button mat-button>SHARE</button>
-              <button mat-button>SHARE</button>
-              <button mat-button>SHARE</button>
-            </mat-card-actions>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button class="listo">Listo</button>
+        <button mat-button>Cancelar</button>
+
+      </mat-card-actions>
 
 
-  </mat-card></mat-grid-tile>
-  <mat-grid-tile><button mat-raised-button>Waiter queue</button></mat-grid-tile>
-  <mat-grid-tile><button mat-raised-button>Estadisticas</button></mat-grid-tile>
-  <mat-grid-tile><button mat-raised-button>Agregar o editar productos</button></mat-grid-tile>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <button mat-raised-button>Estadisticas</button>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <button mat-raised-button>Agregar o editar productos</button>
+  </mat-grid-tile>
 </mat-grid-list>
-<button mat-raised-button routerLink="/mainpage" >Back</button>
+<button mat-raised-button routerLink="/mainpage">Back</button>
