--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
+
+<div class="page">
 <mat-toolbar>
 <span>WaiterExpress Lobby</span>
 
 </mat-toolbar>
 <router-outlet></router-outlet>
 
-
+</div>
 
