--- a/src/app/kitchenqueue/kitchenqueue.component.html
+++ b/src/app/kitchenqueue/kitchenqueue.component.html
@@ -1,14 +1,14 @@
 
 
-<mat-grid-list cols="3" rowHeight="400px">
-  <mat-grid-tile>
+<mat-grid-list  cols="3" rowHeight="400px"  >
+  <mat-grid-tile *ngFor="let pedidoslist of pedidos; let i=index" >
 
     <mat-card class="card">
     
       <mat-card-header class="mat-card-header">
 
         <mat-card-title class="tiempo">1:45 min</mat-card-title>
-        <mat-card-title class="title"> #1 </mat-card-title>
+        <mat-card-title class="title"> #{{i}} </mat-card-title>
 
       </mat-card-header>
 
@@ -37,34 +37,6 @@
 
   </mat-grid-tile>
 
-  <mat-grid-tile>
-    <mat-card class="card">
 
-      <mat-card-header class="mat-card-header">
-        <mat-card-title class="tiempo">1:45 min</mat-card-title>
-        <mat-card-title class="title"> #100 </mat-card-title>
-
-
-      </mat-card-header>
-      <mat-card-content class="mat-card-content">
-        <hr>
-
-
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button class="listo">Listo</button>
-        <button mat-button>Cancelar</button>
-
-      </mat-card-actions>
-
-
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button mat-raised-button>Estadisticas</button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button mat-raised-button>Agregar o editar productos</button>
-  </mat-grid-tile>
 </mat-grid-list>
 <button mat-raised-button routerLink="/mainpage">Back</button>
