cambios de diseno
cambios graficos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<div class="page">
-<mat-toolbar>
+<div >
+<mat-toolbar class="page">
 <span>WaiterExpress Lobby</span>
 
 </mat-toolbar>
