Boton de prueba agregado

--- a/src/app/kitchenqueue/kitchenqueue.component.html
+++ b/src/app/kitchenqueue/kitchenqueue.component.html
@@ -40,3 +40,4 @@
 
 </mat-grid-list>
 <button mat-raised-button routerLink="/mainpage">Back</button>
+<button mat-raised-button (click)="insertdata()">insert</button>
