pagina para todos rest

--- a/src/app/featureselector/featureselector.component.html
+++ b/src/app/featureselector/featureselector.component.html
@@ -1,9 +1,7 @@
-
-
-  <mat-card class="card" >
+<mat-card class="card" >
   
 <mat-grid-list cols="1" rowHeight="50px">
-  <mat-grid-tile><button class="buttonmenu" mat-raised-button routerLink="/featureselector" routerLinkActive="active">Kitchen queue</button></mat-grid-tile>
+  <mat-grid-tile><button class="buttonmenu" mat-raised-button routerLink="/kitchenqueue" routerLinkActive="active">Kitchen queue</button></mat-grid-tile>
   <mat-grid-tile><button class="buttonmenu" mat-raised-button routerLink="/waiterqueue">Waiter queue</button></mat-grid-tile>
   <mat-grid-tile><button class="buttonmenu" mat-raised-button>Estadisticas</button></mat-grid-tile>
   <mat-grid-tile><button class="buttonmenu" mat-raised-button>Agregar o editar productos</button></mat-grid-tile>
